--- a/data/main.conf
+++ b/data/main.conf
@@ -6,7 +6,10 @@
 # Default adaper name
 # %h - substituted for hostname
 # %d - substituted for adapter id
-Name = "Bluez"
+# %b - substituted for ro.product.brand
+# %m - substituted for ro.product.model
+# %n - substituted for ro.product.name
+Name = "%m"
 
 # Default device class. Only the major and minor device class bits are
 # considered.
