Set class field appropriately.

--- a/data/main.conf
+++ b/data/main.conf
@@ -13,7 +13,11 @@ Name = "%m"
 
 # Default device class. Only the major and minor device class bits are
 # considered.
-Class = 0x000100
+# Local device class
+#     0x400000  - Service class: Telephony
+#     0x000200  - Major class: Phone
+#     0x00000C  - Minor class: Smart phone
+Class = 0x40020C
 
 # How long to stay in discoverable mode before going back to non-discoverable
 # The value is in seconds. Default is 180, i.e. 3 minutes.
