Strip extra quotes from device name.

--- a/data/main.conf
+++ b/data/main.conf
@@ -9,7 +9,7 @@
 # %b - substituted for ro.product.brand
 # %m - substituted for ro.product.model
 # %n - substituted for ro.product.name
-Name = "%m"
+Name = %m
 
 # Default device class. Only the major and minor device class bits are
 # considered.
