--- a/data/audio.conf
+++ b/data/audio.conf
@@ -2,16 +2,14 @@
 
 # This section contains options which are not specific to any
 # particular interface
+# NOTE: Enable=Sink means that bluetoothd exposes Sink interface for remote
+# devices, and the local device is a Source
 [General]
-Enable=Source,Control,Sink
-Disable=Headset,Gateway
+Enable=Sink,Control
+Disable=Headset,Gateway,Source
 
 # Switch to master role for incoming connections (defaults to true)
 #Master=true
-
-# If we want to disable support for specific services
-# Defaults to supporting all implemented services
-#Disable=Control,Source
 
 # SCO routing. Either PCM or HCI (in which case audio is routed to/from ALSA)
 # Defaults to HCI
