Do not attempt role switch to Master.
Just causes too many problems with legacy carkits that cannot handle role
switch.

Change-Id: I1328260d2bcf1968c34a86d1dc3b2fc624b3d91b

--- a/data/audio.conf
+++ b/data/audio.conf
@@ -8,8 +8,8 @@
 Enable=Sink,Control
 Disable=Headset,Gateway,Source
 
-# Switch to master role for incoming connections (defaults to true)
-#Master=true
+# Do not require master role for incoming connections
+Master=false
 
 # SCO routing. Either PCM or HCI (in which case audio is routed to/from ALSA)
 # Defaults to HCI
