Disable park state in main.conf
This is to match code change in external/bluetooth/bluez/, which
allow configuration of park state support. Turn off park state
on Android to avoid connection lost with devices supporting park
state.

Signed-off-by: Bao Liang <tim.bao@motorola.com>

--- a/data/main.conf
+++ b/data/main.conf
@@ -57,3 +57,10 @@ ReverseServiceDiscovery = true
 # Enable name resolving after inquiry. Set it to 'false' if you don't need
 # remote devices name and want shorter discovery cycle. Defaults to 'true'.
 NameResolving = true
+
+# The link policy for connections. By default it's set to 15(0x000f) which is
+# a bitwise OR of role switch(0x0001), hold mode(0x0002), sniff mode(0x0004)
+# and park state(0x0008) are all enabled. However, some devices have
+# connection stability issue or fail to setup SCO when the link is in park
+# state, which requires park state bit cleared.
+DefaultLinkPolicy = 7
