Add parrot to the blacklist for auto pairing.
Change-Id: Ifd31ceb25d6a13d06d7d3decf82b2c69d91111dc

--- a/data/auto_pairing.conf
+++ b/data/auto_pairing.conf
@@ -16,6 +16,6 @@ AddressBlacklist=00:02:C7,00:16:FE,00:19:C1,00:1B:FB,00:1E:3D,00:21:4F,00:23:06,
 ExactNameBlacklist=Motorola IHF1000,i.TechBlueBAND,X5 Stereo v1.3
 
 // Blacklisting by Partial Name (if name starts with)
-PartialNameBlacklist=BMW,Audi
+PartialNameBlacklist=BMW,Audi,Parrot
 
 // Blacklisting by addition of the address during usage
