Set BT class for nonsmartphone case.
Change-Id: Iafcd7b311c2b28ae185dd3d5974df3eaa5b02109

--- a/data/main.nonsmartphone.conf
+++ b/data/main.nonsmartphone.conf
@@ -15,9 +15,9 @@ Name = %m
 # considered.
 # Local device class
 #     0x400000  - Service class: Telephony
-#     0x000200  - Major class: Phone
-#     0x00000C  - Minor class: Smart phone
-Class = 0x40020C
+#     0x000100  - Major class: Computer
+#     0x00000C  - Minor class: Laptop + Handheld PC
+Class = 0x40011C
 
 # How long to stay in discoverable mode before going back to non-discoverable
 # The value is in seconds. Default is 180, i.e. 3 minutes.
