Change Service class for nonsmartphone case.
Change from telephony to capturing + networking - which
seems like the best possible fit.

Change-Id: Ifa8139a45f149fa3168a754f2398a402a0fb3855

--- a/data/main.nonsmartphone.conf
+++ b/data/main.nonsmartphone.conf
@@ -14,10 +14,10 @@ Name = %m
 # Default device class. Only the major and minor device class bits are
 # considered.
 # Local device class
-#     0x400000  - Service class: Telephony
+#     0x0a0000  - Service class: Capturing (Microphone) + Networking
 #     0x000100  - Major class: Computer
 #     0x00000C  - Minor class: Laptop + Handheld PC
-Class = 0x40011C
+Class = 0x0a0011C
 
 # How long to stay in discoverable mode before going back to non-discoverable
 # The value is in seconds. Default is 180, i.e. 3 minutes.
