Add Mot keyboard to blacklist file.
Change-Id: Ibe4f3ca0e415981e8ad5ee3f057a5643eff42907

--- a/data/auto_pairing.conf
+++ b/data/auto_pairing.conf
@@ -18,4 +18,10 @@ ExactNameBlacklist=Motorola IHF1000,i.TechBlueBAND,X5 Stereo v1.3,KML_CAN
 // Blacklisting by Partial Name (if name starts with)
 PartialNameBlacklist=BMW,Audi,Parrot
 
+// Fixed PIN keyboard blacklist. Keyboards should have variable PIN
+// The keyboards below have a fixed PIN of 0000, so we will auto pair.
+// Note the reverse logic in this case compared to other's in this file
+// where its a blacklist for not auto pairing.
+FixedPinZerosKeyboardBlacklist=00:0F:F6
+
 // Blacklisting by addition of the address during usage
