Update conf files for Bluez upgrade to 4.89
Change-Id: Ie27ae5f6e71372ed1109df5b648c9e502db61a5a

--- a/data/audio.conf
+++ b/data/audio.conf
@@ -8,8 +8,12 @@
 Enable=Sink,Control
 Disable=Headset,Gateway,Source
 
-# Do not require master role for incoming connections
+# Switch to master role for incoming connections (defaults to true)
 Master=false
+
+# If we want to disable support for specific services
+# Defaults to supporting all implemented services
+#Disable=Control,Source
 
 # SCO routing. Either PCM or HCI (in which case audio is routed to/from ALSA)
 # Defaults to HCI
@@ -31,6 +35,13 @@ Master=false
 
 # Maximum number of connected HSP/HFP devices per adapter. Defaults to 1
 #MaxConnections=1
+
+# Set to true to enable use of fast connectable mode (faster page scanning)
+# for HFP when incomming call starts. Default settings are restored after
+# call is answered or rejected. Page scan interval is much shorter and page
+# scan type changed to interlaced. Such allows faster connection initiated
+# by a headset.
+FastConnectable=false
 
 # Just an example of potential config options for the other interfaces
 [A2DP]
