--- a/data/main.nonsmartphone.conf
+++ b/data/main.nonsmartphone.conf
@@ -58,6 +58,20 @@ ReverseServiceDiscovery = true
 # remote devices name and want shorter discovery cycle. Defaults to 'true'.
 NameResolving = true
 
+# Enable runtime persistency of debug link keys. Default is false which
+# makes debug link keys valid only for the duration of the connection
+# that they were created for.
+DebugKeys = false
+
+# Enable Low Energy support if the dongle supports. Default is false.
+# Enable/Disable interleave discovery and attribute server over LE.
+EnableLE = false
+
+# Enable the GATT Attribute Server. Default is false, because it is only
+# useful for testing. Attribute server is not enabled over LE if EnableLE
+# is false.
+AttributeServer = false
+
 # The link policy for connections. By default it's set to 15(0x000f) which is
 # a bitwise OR of role switch(0x0001), hold mode(0x0002), sniff mode(0x0004)
 # and park state(0x0008) are all enabled. However, some devices have
