Add Car to the partial name blacklist.
Another signal not to trigger auto pairing.

Change-Id: I56bb2b7e7e18a255456c238b864b474038da315a

--- a/data/auto_pairing.conf
+++ b/data/auto_pairing.conf
@@ -16,7 +16,7 @@ AddressBlacklist=00:02:C7,00:16:FE,00:19:C1,00:1B:FB,00:1E:3D,00:21:4F,00:23:06,
 ExactNameBlacklist=Motorola IHF1000,i.TechBlueBAND,X5 Stereo v1.3,KML_CAN
 
 // Blacklisting by Partial Name (if name starts with)
-PartialNameBlacklist=BMW,Audi,Parrot
+PartialNameBlacklist=BMW,Audi,Parrot,Car
 
 // Fixed PIN keyboard blacklist. Keyboards should have variable PIN
 // The keyboards below have a fixed PIN of 0000, so we will auto pair.
