Change class to handheld from Laptop.
This makes it work with digital pens and other devices.

Change-Id: Ia0615cdd6713efdeac2da096bbd9cfb84ad8fa67

--- a/data/main.nonsmartphone.le.conf
+++ b/data/main.nonsmartphone.le.conf
@@ -16,8 +16,8 @@ Name = %m
 # Local device class
 #     0x0a0000  - Service class: Capturing (Microphone) + Networking
 #     0x000100  - Major class: Computer
-#     0x00000C  - Minor class: Laptop
-Class = 0x0a0010C
+#     0x00000C  - Minor class: Handheld
+Class = 0x0a0110
 
 # How long to stay in discoverable mode before going back to non-discoverable
 # The value is in seconds. Default is 180, i.e. 3 minutes.
