Change RememberPowered to false
Change RememberPowered to false so that the power event is powerup after Bluez
starts so that the adapter state machine can recover bluez crash easier.
bug 5239719

Change-Id: I4b5b208ee89b4d072192f4b59003e76e22ed2d10

--- a/data/main.conf
+++ b/data/main.conf
@@ -42,7 +42,7 @@ DiscoverSchedulerInterval = 0
 InitiallyPowered = true
 
 # Remember the previously stored Powered state when initializing adapters
-RememberPowered = true
+RememberPowered = false
 
 # Use vendor, product and version information for DID profile support.
 # The values are separated by ":" and VID, PID and version.
