--- a/data/main.le.conf
+++ b/data/main.le.conf
@@ -42,7 +42,7 @@ DiscoverSchedulerInterval = 0
 InitiallyPowered = true
 
 # Remember the previously stored Powered state when initializing adapters
-RememberPowered = true
+RememberPowered = false
 
 # Use vendor, product and version information for DID profile support.
 # The values are separated by ":" and VID, PID and version.
