--- a/project.config
+++ b/project.config
@@ -1,9 +1,11 @@
 [project]
 	description = bluetooth tools
+	state = active
 [receive]
 	requireContributorAgreement = true
 [submit]
 	action = merge always
+	mergeContent = true
 [access "refs/heads/*"]
 	label-Code-Review = -2..+2 group Android Maintainers
 	label-Verified = -1..+0 group Android Maintainers
